# RPG_Demo

./: .env.example  .env.llm.example  .gitignore  README.en.md  README.md  README.zh.md  compose.yaml  frontend_agent_contract.md  pyproject.toml
alembic/: env.py  script.py.mako
app/: __init__.py  main.py
docs/: agent_collab_workflow.md  architecture.md  architecture_story_runtime.md  author_play_stability_suite.md  db_migration_runbook.md  deployment_probes.md  oncall_sop.md  playable_validation_contract.md  prompt_authoring_structure.md  runtime_status.md  story_architecture_v3.md  ui_author_play_regression_2026-03-06.md
eval_data/: author_play_stability_suite_v1.json  prompt_suite_fun_v1.json  prompt_suite_v1.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
rpg_backend/: __init__.py  auth.py  config.py  content_language.py  errors.py  generation_skill.py  llm_gateway.py  main.py  product_copy.py  product_text.py  responses_transport.py  schemas.py  sqlite_utils.py  store.py  story_profiles.py
scripts/: branch_coverage.py  call_llm_worker.py  db_migrate.py  dev_stack.sh  emit_runtime_alerts.py  evaluate_generator.py  evaluate_llm_gate.py  evaluate_llm_story_generation.py  k8s_db_migrate_manual.sh  k8s_rollback_last.sh  k8s_verify_rollout.sh  lint_story_pack.py  playwright_smoke.sh  run_author_play_release_gate.py  run_author_play_stability.py  simulate_playthrough.py
specs/: brand_genre_positioning_20260326.md  interface_governance_20260319.md  interface_stability_matrix_20260319.md  play_ending_text_recommendations_20260326.md  portrait_generation_workflow_20260325.md  product_positioning_competitive_strategy_20260328.md
tests/: auth_helpers.py  author_fixtures.py  conftest.py  test_auth_api.py  test_author_cast_portraits.py  test_author_compiler_logic.py  test_author_copilot_rewrite_semantics.py  test_author_generation_transport.py  test_author_planning.py  test_author_play_release_gate.py  test_author_play_stability.py  test_author_product_api.py  test_author_sparks.py  test_author_workflow.py  test_author_workflow_architecture.py  test_author_workflow_beat_generation.py  test_author_workflow_validators.py  test_benchmark_api.py  test_branch_coverage.py  test_browser_product_smoke.py  test_canary_accept_all.py  test_canary_fail_forward.py  test_canary_low_confidence_progress.py  test_canary_runtime_input_tolerance.py  test_canary_story_completion.py  test_candidate_executor.py  test_character_knowledge.py  test_character_roster.py  test_cleanup_dev_artifacts.py  test_content_language.py  test_contract_artifacts_sync.py  test_copilot_stability_soak.py  test_docs_consistency.py  test_emit_runtime_alerts.py  test_fullstack_integration_gate.py  test_generation_acceptance_eval.py  test_generator_eval.py  test_generator_pipeline.py  test_health.py  (+42 more)
(+517 files in other folders)
