[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-backend"
version = "0.1.0"
description = "Minimal mock backend for RPG UI reimplementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[project.scripts]
export-openapi = "scripts.export_openapi:main"
generate-frontend-sdk = "scripts.generate_frontend_sdk:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rpg_backend*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-q -m 'not live_openai_critical'"
testpaths = ["tests"]
markers = [
  "live_openai_critical: real OpenAI integration checks for runtime critical paths",
]
