[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-backend"
version = "0.1.0"
description = "Backend-first strict quality-first interactive narrative RPG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "sqlmodel>=0.0.24,<1.0.0",
  "sqlalchemy>=2.0.37,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
export-openapi = "scripts.export_openapi:main"
generate-frontend-sdk = "scripts.generate_frontend_sdk:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rpg_backend*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-q -m 'not live_openai_critical'"
testpaths = ["tests"]
markers = [
  "live_openai_critical: real OpenAI integration checks for runtime critical paths",
]
