[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-demo-rebuild"
version = "0.1.0"
description = "Clean-slate interactive narrative backend rebuilt around LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "openai>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
  "playwright>=1.54.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rpg_backend*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
